[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "springboardvr"
version = "0.0.1"
description = "Python library for interacting with Springboard VR API"
keywords = ["springboardvr", "api", "vr"]
license = { text = "MIT" }
requires-python = ">=3.9"

[project.dependencies]
httpx = "^27.0.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
